HPCDATAMGM-1986: Changes to address copilot review comments

--- a/src/hpc-web/src/main/resources/templates/download.html
+++ b/src/hpc-web/src/main/resources/templates/download.html
@@ -169,7 +169,7 @@
 								</div>
 
 								<div id="destLocationDiv" th:if="${downloadType == 'collection'}" style="margin-bottom: -1px">
-							       <div class="col-sm-12 column leftMargin" id="radioset2" style="display: flex; align-items: center; margin-top: 10px;">
+							       <div class="col-sm-12 column leftMargin" style="display: flex; align-items: center; margin-top: 10px;">
 									<label for="downloadDestinationType" style="min-width: 180px; margin-bottom: 0;">Destination Location:</label>
 									<div style="flex: 1;">
 									 <select name="downloadDestinationType" id="downloadDestinationType" class="form-control fieldWidth" style="margin-left: 10px;">
